update release logic
publishes snapshot to maven central now